--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -3,15 +3,15 @@
     font-family:"Verdana, DejaVu Sans, sans-serif";
 }
 
-#2 {
+#two {
     color: blue;
     font-size: 36px;
 
 }
 
-#4 {
+#four {
     background-color: rgb(124,252,0)
     font-size: 24px;
     font-weight: bold;
-    
+
 }
