--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -10,7 +10,7 @@
 }
 
 #four {
-    background-color: rgb(124,252,0)
+    background-color: rgb(124,252,0);
     font-size: 24px;
     font-weight: bold;
 
