--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -9,9 +9,11 @@
 
 }
 
+.adjust-font-size {
+    font-size: 24px;
+}
+
 #four {
     background-color: rgb(124,252,0);
-    font-size: 24px;
     font-weight: bold;
-
 }
