--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -10,7 +10,8 @@
 
 }
 
-.click.no-click {
+.click,
+.no-click {
     font-size:28px;
     font-family: "Helvetica", "Times New Roman", "sans-serif";
 }
